--- a/templates/cuspage.html
+++ b/templates/cuspage.html
@@ -169,16 +169,16 @@
 
                         </ul>
                     </li>
-                     <li>
-                        <a href="javascript:void(0);" class="waves-effect"><i
-                                class="icon-spread"></i><span> Feedback/Enquiry <span class="float-right menu-arrow"><i
-                                class="mdi mdi-chevron-right"></i></span> </span></a>
-                        <ul class="submenu">
-<!--                            <li><a href="#">Add Attendance</a></li>-->
-                            <li><a href="#">View Enquiries</a></li>
+<!--                     <li>-->
+<!--                        <a href="javascript:void(0);" class="waves-effect"><i-->
+<!--                                class="icon-spread"></i><span> Feedback/Enquiry <span class="float-right menu-arrow"><i-->
+<!--                                class="mdi mdi-chevron-right"></i></span> </span></a>-->
+<!--                        <ul class="submenu">-->
+<!--&lt;!&ndash;                            <li><a href="#">Add Attendance</a></li>&ndash;&gt;-->
+<!--                            <li><a href="#">View Enquiries</a></li>-->
 
-                        </ul>
-                    </li>
+<!--                        </ul>-->
+<!--                    </li>-->
 <!--                    <li>-->
 <!--                        <a href="javascript:void(0);" class="waves-effect">-->
 <!--                            <i class="icon-spread"></i><span> Staff <span class="float-right menu-arrow">-->
