--- a/templates/ownerpage.html
+++ b/templates/ownerpage.html
@@ -180,6 +180,16 @@
                         </ul>
                     </li>
 <!--                    <li>-->
+<!--                        <a href="javascript:void(0);" class="waves-effect"><i-->
+<!--                                class="icon-spread"></i><span> Feedback <span class="float-right menu-arrow"><i-->
+<!--                                class="mdi mdi-chevron-right"></i></span> </span></a>-->
+<!--                        <ul class="submenu">-->
+<!--&lt;!&ndash;                            <li><a href="#">Add Attendance</a></li>&ndash;&gt;-->
+<!--                            <li><a href="{% url 'Feedback_admin' %}">View FeedBack</a></li>-->
+
+<!--                        </ul>-->
+<!--                    </li>-->
+<!--                    <li>-->
 <!--                        <a href="javascript:void(0);" class="waves-effect">-->
 <!--                            <i class="icon-spread"></i><span> Staff <span class="float-right menu-arrow">-->
 <!--                            <i class="mdi mdi-chevron-right"></i></span> </span></a>-->
