--- a/templates/adminpage.html
+++ b/templates/adminpage.html
@@ -169,6 +169,16 @@
 
                         </ul>
                     </li>
+                     <li>
+                        <a href="javascript:void(0);" class="waves-effect"><i
+                                class="icon-spread"></i><span>FeedBack <span class="float-right menu-arrow"><i
+                                class="mdi mdi-chevron-right"></i></span> </span></a>
+                        <ul class="submenu">
+<!--                            <li><a href="{% url 'generate_bill' %}">Add Bills</a></li>-->
+                            <li><a href="{% url 'Feedback_admin' %}">View FeedBack</a></li>
+
+                        </ul>
+                    </li>
 <!--                     <li>-->
 <!--                        <a href="javascript:void(0);" class="waves-effect"><i-->
 <!--                                class="icon-spread"></i><span> Feedback/Enquiry <span class="float-right menu-arrow"><i-->
