--- a/templates/cuspage.html
+++ b/templates/cuspage.html
@@ -169,6 +169,16 @@
 
                         </ul>
                     </li>
+                     <li>
+                        <a href="javascript:void(0);" class="waves-effect"><i
+                                class="icon-spread"></i><span> FeedBack <span class="float-right menu-arrow"><i
+                                class="mdi mdi-chevron-right"></i></span> </span></a>
+                        <ul class="submenu">
+                            <li><a href="{% url 'Feedback_add_user' %}">Add Feedback</a></li>
+                            <li><a href="{% url 'Feedback_view_user' %}">View Feedback</a></li>
+
+                        </ul>
+                    </li>
 <!--                     <li>-->
 <!--                        <a href="javascript:void(0);" class="waves-effect"><i-->
 <!--                                class="icon-spread"></i><span> Feedback/Enquiry <span class="float-right menu-arrow"><i-->
