--- a/templates/loginpage.html
+++ b/templates/loginpage.html
@@ -1,5 +1,6 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <section class="vh-100" style="background-color: #9A616D;">
+
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col col-xl-10">
@@ -35,6 +36,12 @@
                     <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
                   </div>
                     <p>Register as :</p><a href="{% url 'ownerreg' %}">Owner</a> &nbsp|&nbsp <a href="{% url 'cusreg' %}">Customer</a>
+                   <div class="col-lg-8">
+    {% for message in messages %}
+    <div class="alert alert-info" role="alert">
+        {{message}}
+    </div>
+    {% endfor %}
                 </form>
 
               </div>
