--- a/templates/schedule_view.html
+++ b/templates/schedule_view.html
@@ -14,6 +14,7 @@
                           <th>DATE</th>
                           <th>STARTING TIME</th>
                           <th>ENDING TIME</th>
+                          <th>PROPERTY</th>
                           <th>update</th>
                           <th>Remove</th>
                         </tr>
@@ -26,6 +27,7 @@
                           <td>{{ s.date }}</td>
                           <td>{{ s.start_time }}</td>
                           <td>{{ s.end_time }}</td>
+                          <td>{{ s.property }}</td>
                           <td><a href="{% url 'schedule_update' s.id %}" class="btn btn-primary">Update</a></td>
                           <td>
                             <form action="{% url 'schedule_delete' s.id %}" method="post">
